--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
     "allowUnusedLabels": false,
     "declaration": false,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2018"],
+    "lib": ["es2017"],
     "module": "commonjs",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "pretty": true,
     "strict": true,
-    "target": "es2018",
+    "target": "esnext",
     "paths": {
       "canadv.ash": ["./contrib/canadv.ash.d.ts"]
     }
